add content to the index.html as well as style formatting to the styles.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <title>Our Blog about Curry Types</title>
   </head>
   <body>
-    <h1>Curry</h1>
+
+    <div class="top">
+      <h1>Curry</h1>
+      <img src="images/curry.jpg"/>
+    </div>
+
+    <div class="intro">
+      <h2>This is our blog about types of curry. Enjoy!</h2>
+      <p>
+        We travel the world tasting different curries. Bacon ipsum dolor amet pork loin doner tail drumstick jowl flank sirloin pig cupim kevin pork belly corned beef chicken tenderloin. Venison chuck jowl, rump pork loin ball tip t-bone porchetta alcatra meatball. Chuck porchetta landjaeger, cow beef andouille tri-tip leberkas ball tip turkey meatloaf bresaola rump shankle short ribs. Turducken pork loin pancetta swine bresaola short loin flank picanha ham hock t-bone salami cupim pig meatball. Tri-tip tail salami frankfurter. Corned beef pork loin biltong pig, cupim fatback bresaola shoulder.
+      </p>
+    </div>
+
+    <div class="content">
+      <h2>Taste of India</h2>
+      <p>
+        In India the curry is good. Pancetta alcatra bacon, frankfurter ribeye shoulder pork chop tenderloin short ribs ham picanha meatball salami kevin. Ribeye boudin drumstick, tri-tip pig short ribs spare ribs burgdoggen fatback venison kevin turducken kielbasa. Bacon ham hock drumstick, short ribs sausage pancetta burgdoggen picanha ham rump jerky pork loin. Turducken beef short ribs picanha ham shank spare ribs flank leberkas rump cow fatback kevin porchetta beef ribs. Andouille ham chuck doner, chicken beef ribs kevin ribeye leberkas. Shankle ball tip pork belly beef ham hock picanha pancetta leberkas. Sausage meatball tail pork chop. Pancetta pork loin tail, pastrami tri-tip chicken ribeye flank beef ribs corned beef bacon. Chicken alcatra filet mignon sausage fatback turducken tongue corned beef frankfurter tenderloin boudin brisket leberkas hamburger. Andouille leberkas kielbasa shoulder turducken tail bresaola ribeye ham hock filet mignon doner brisket chicken. Shankle tail cow corned beef tongue.
+      </p>
+
+      <h2>Taste of Thailand</h2>
+      <p>
+        Thailand has classic curry. Ham hock hamburger pork short ribs rump boudin cow jerky swine, pastrami tongue. Shankle picanha pancetta, alcatra drumstick jowl burgdoggen porchetta ham landjaeger bacon meatloaf chicken shank. Pig ham hock pastrami pork chuck turducken landjaeger alcatra chicken swine kielbasa bacon. Tail ham jowl, hamburger pork chop beef rump. Jowl porchetta flank, leberkas fatback andouille short loin hamburger bacon. Pork chop venison meatball, hamburger ground round corned beef leberkas. Cupim andouille jerky meatloaf strip steak brisket ham. Salami corned beef strip steak brisket, pork hamburger leberkas flank tail drumstick ribeye ground round. Pig corned beef brisket, cupim alcatra pancetta bacon strip steak t-bone leberkas beef turkey drumstick pork. Picanha sausage flank, ribeye shoulder pig strip steak boudin jowl tri-tip bacon. Spare ribs pork chop capicola, sirloin t-bone beef pork doner tenderloin pig prosciutto.
+      </p>
+
+      <h2>Taste of Korea</h2>
+      <p>
+        Korea. Salami andouille alcatra, filet mignon sirloin cupim bacon sausage meatball turkey tri-tip. Shankle chuck brisket cow cupim tail burgdoggen, sausage bresaola landjaeger porchetta ground round. Ham hock salami hamburger ball tip pig shank. Sirloin pork chop brisket cow alcatra, pork belly beef ribs pancetta biltong spare ribs pork burgdoggen meatball boudin. Venison ribeye hamburger pork swine fatback bresaola biltong ham hock. Sirloin jerky alcatra, ball tip pork belly porchetta ground round. Shoulder hamburger chuck, short loin capicola bresaola pastrami short ribs. Leberkas tri-tip bresaola, kielbasa pork chop pork drumstick. Jerky pork loin turducken sausage. Frankfurter short loin fatback bresaola sausage tenderloin. Rump beef ribs short ribs doner landjaeger flank. Filet mignon ham hock boudin, pork belly jerky pork ball tip short loin bacon. Pastrami shankle alcatra drumstick hamburger. Pig sausage porchetta chicken pork loin t-bone cupim. Chicken fatback beef brisket, spare ribs pork boudin pancetta short ribs. Salami ham hock doner bresaola frankfurter. Picanha pastrami boudin venison ham pork loin, andouille spare ribs tongue short ribs pork belly prosciutto cow. Meatball shankle brisket short ribs. Kielbasa brisket pork chop kevin beef boudin pig tongue andouille hamburger ball tip landjaeger beef ribs drumstick.
+      </p>
+    </div>
+
   </body>
 </html>
